src/main/java/org/example/error/wrapper/ThrowingConsumer.java
package org.example.error.wrapper;

@FunctionalInterface
public interface ThrowingConsumer<T, E extends Exception> {
    void accept(T t) throws E;
}